--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
 
         {% if site.show_downloads %}
         <ul class="downloads">
-          <li><a href="{{KCNJ5_note.html}}">這邊請<strong>KCNJ5筆記</strong></a></li>
+          <li><img src="KCNJ5_note.html">這邊請<strong>KCNJ5筆記</strong></a></li>
           <!-- <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
           <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
           -->
