--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,9 +32,10 @@
 
         {% if site.show_downloads %}
         <ul class="downloads">
-          <li><a href="KCNJ5_note.html">這邊請<strong>KCNJ5筆記</strong></a></li>
-          <!-- <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
+          <li><a href="{{https://ishiou.github.io/PaperReading/}}">回首頁<strong>PaperReading</strong></a></li>
+          <li><a href="KCNJ5_note.html">這邊請<strong>KCNJ5筆記</strong></a></li> <!--https://ishiou.github.io/PaperReading/KCNJ5_note.html-->
+          
+          <!--<li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
           -->
         </ul>
         {% endif %}
