--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
 
         {% if site.show_downloads %}
         <ul class="downloads">
-          <li><a href="{{ ishiou.github.io/PaperReading/ }}">回首頁<strong>PaperReading</strong></a></li>
+          <li><a href="https://ishiou.github.io/PaperReading/">回首頁<strong>PaperReading</strong></a></li>
           <li><a href="KCNJ5_note.html">這邊請<strong>KCNJ5筆記</strong></a></li> <!--https://ishiou.github.io/PaperReading/KCNJ5_note.html-->
           
           <!--<li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
